--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,50 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Application</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
 
+<!--    <div class="container">-->
+<!--        <h1>Hello There!</h1>-->
+<!--        <p>To get started, edit <code>src/index.js</code>.</p>-->
+<!--    </div>-->
+
     <div class="container">
-        <h1>Hello There!</h1>
-        <p>To get started, edit <code>src/index.js</code>.</p>
+
+        <h1 class="text-center">Movie Application</h1>
+
+        <table id="products" class="table table-striped table-bordered">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Rating</th>
+                <th scope="col">Year</th>
+                <th scope="col">Genre</th>
+            </tr>
+            </thead>
+            <tbody id="insertProducts">
+
+
+            <!--    it should look something like this-->
+            <!--        <tr>-->
+            <!--            <td>data[i].title</td>-->
+            <!--            <td>data[i].quantity</td>-->
+            <!--            <td>data[i].price</td>-->
+            <!--            <td>data[i].categories</td>-->
+            <!--        </tr>-->
+
+            </tbody>
+        </table>
+        <button id="btnRefresh">Click Here to Refresh!</button>
+        <div id="randomDiv"></div>
     </div>
+
+<!--    BOOTSTRAP-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <script src="./main.js"></script>
 </body>
