--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
     <div class="container">
 
+        <div class="loadingDiv">Loading</div>
         <h1 class="text-center">Movie Application</h1>
 
         <table id="products" class="table table-striped table-bordered">
@@ -39,8 +40,8 @@
 
             </tbody>
         </table>
-        <button id="btnRefresh">Click Here to Refresh!</button>
-        <div id="randomDiv"></div>
+<!--        <button id="btnRefresh">Click Here to Refresh!</button>-->
+<!--        <div id="randomDiv"></div>-->
     </div>
 
 <!--    BOOTSTRAP-->
