--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,14 @@
 <!--    </div>-->
 
     <div class="container">
-
-        <div class="loadingDiv">Loading</div>
+        <div class="row"></div>
+        <img src="img/filmreel.png" id="loading">
         <h1 class="text-center">Movie Application</h1>
 
         <table id="products" class="table table-striped table-bordered">
             <thead class="thead-dark">
             <tr>
+                <th scope="col">ID</th>
                 <th scope="col">Title</th>
                 <th scope="col">Rating</th>
                 <th scope="col">Year</th>
@@ -48,6 +49,11 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <!--LOADING STUFF-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
 
     <script src="./main.js"></script>
 </body>
