--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <!--        <img src="img/filmreel.png" id="loading">-->
         <h1 class="text-center">Movie Application</h1>
 
-        <table id="products" class="table table-striped table-bordered">
+        <table id="products" class="table table-striped table-bordered mt-4">
             <thead class="thead-dark">
             <tr>
                 <th scope="col">ID</th>
