added functionality to html for editing and deleting

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,10 @@
         <br>
         <input type="text" id="editMovieName" placeholder="Enter Movie Name">
         <br>
+        <input type="text" id="editMovieGenre" placeholder="Enter Genre">
+        <br>
+        <input type="text" id="editMovieYear" placeholder="Enter Year">
+        <br>
         <label for="editRatingInput">How would you rate this movie?</label>
         <br>
         <select id="editRatingInput">
@@ -81,6 +85,12 @@
         <br>
         <button class="editMovieButton">Submit Changes</button>
 
+        <h2>Delete A Movie</h2>
+        <label for="deleteMovieID">Which movie would you like to edit?</label>
+        <br>
+        <input type="text" id="deleteMovieID" placeholder="Enter Movie ID">
+        <br>
+        <button class="deleteMovieButton">Delete Movie</button>
 
 
     </div>
