working on loading

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
 <!--    </div>-->
 
     <div class="container">
+
+
+
         <div class="row"></div>
+        <div id="loadingDiv" style="display: block"></div>
 <!--        <img src="img/filmreel.png" id="loading">-->
         <h1 class="text-center mt-3">Movie Application</h1>
 
